Changelog
===========

3.3 (unreleased)
----------------

API Changes
^^^^^^^^^^^

- The ``pyfits.new_table`` function is now fully deprecated (though will not
  be removed for a long time, considering how widely it is used.

  Instead please use the more explicit ``pyfits.BinTableHDU.from_columns`` to
  create a new binary table HDU, and the similar
  ``pyfits.TableHDU.from_columns` to create a new ASCII table.  These
  otherwise accept the same arguments as ``pyfits.new_table`` which is now
  just a wrapper for these.

- Fixed an issue where header wildcard matching (for example
  ``header['DATE*']``) can be used to match *any* characters that might appear
  in a keyword.  Previously this only matched keywords containing characters
  in the set ``[0-9A-Za-z_]``.  Now this can also match a hyphen ``-`` and any
  other characters, as some conventions like ``HIERARCH`` and record-valued
  keyword cards allow a wider range of valid characters than standard FITS
  keywords.

Other Changes and Additions
^^^^^^^^^^^^^^^^^^^^^^^^^^^

- PyFITS has switched to a unified code base which supports Python 2.5 through
  3.4 simultaneously without translation.  This *shouldn't* have any
  significant performance impacts, but please report if anything seems
  noticeably slower.  As a reminder, support for Python 2.5 will be ended
  after PyFITS 3.3.x.

- Warnings for deprecated APIs in PyFITS are now always displayed by default.
  This is in line with a similar change made recently to Astropy:
  https://github.com/astropy/astropy/pull/1871
  To disable PyFITS deprecation warnings in scripts one may call
  ``pyfits.ignore_deprecation_warnings()`` after importing PyFITS.

- ``Card`` objects have a new ``is_blank`` attribute which returns ``True`` if
  the card represents a blank card (no keyword, value, or comment) and
  ``False`` otherwise.


3.2.3 (unreleased)
------------------

- Fixed an issue where PyFITS allowed newline characters in header values and