@@ -380,9 +380,11 @@ def writeto(filename, data, header=None, output_verify='exception',
         argument is optional.
 
     output_verify : str
-        Output verification option.  Must be one of ``"fix"``,
-        ``"silentfix"``, ``"ignore"``, ``"warn"``, or
-        ``"exception"``.  See :ref:`verify` for more info.
+        Output verification option.  Must be one of ``"fix"``, ``"silentfix"``,
+        ``"ignore"``, ``"warn"``, or ``"exception"``.  May also be any
+        combination of ``"fix"`` or ``"silentfix"`` with ``"+ignore"``,
+        ``+warn``, or ``+exception" (e.g. ``"fix+warn"``).  See :ref:`verify`
+        for more info.
 
     clobber : bool, optional
         If `True`, and if filename already exists, it will overwrite
